<resources>
    <string name="app_name">GlobalGaming</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_shopping_cart">Shopping Cart</string>
    <string name="title_settings">Settings</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="registration">Register</string>
    <string name="or_registration">or Register</string>
    <string name="or_login">or Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="error_wrong_user_input">Email or password is incorrect.</string>
    <string name="something_went_wrong">Something went wrong. Try later.</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="sales">Sales</string>
    <string name="hardware">Hardware</string>
    <string name="games">Games</string>
    <string name="birthday">Birthday</string>
    <string name="street">Street</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="loading_dots">…</string>
    <string name="nothing_yet">-</string>
    <string name="contact">Contact</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="imprint">Imprint</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="remove_product">Remove Product</string>
    <string name="sum">Sum</string>
    <string name="buy_now">Buy Now</string>
    <string name="thank_you_message_title">Thank you very much ! 👑</string>
    <string name="thank_you_message_body">We have received your order and will get back to you shortly. 🏎️</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="add">Add</string>
    <string name="specifications">Specifications</string>
    <string name="genre">Genre</string>
    <string name="player">Player</string>
    <string name="publication">Publication</string>
    <string name="minimum_requirements">Minimum Requirements</string>
    <string name="recommended_requirements">Recommended Requirements</string>
    <string name="cpu">Cpu</string>
    <string name="graphic_card">Graphic card</string>
    <string name="ram">Ram</string>
    <string name="product">Product</string>
    <string name="name">Name</string>
    <string name="select_category">Select category</string>
    <string name="game">Game</string>
    <string name="price">Price</string>
    <string name="checkbox_sale_title">In Sale ?</string>
    <string name="percent">Percent</string>
    <string name="login_failed">Email or Password is incorrect. Try again.</string>
    <string name="other_failed">Something went wrong. Try again.</string>
    <string name="user_data_could_not_load">Your data could not be loaded. Try again later.</string>
    <string name="user_name">Username</string>
    <string name="fsk">Fsk</string>
    <string name="type">Type</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="added_successfully">Added successfully</string>
    <string name="company_name">GlobalGaming AG</string>
    <string name="company_city">72461 Albstadt</string>
    <string name="company_phone_number">+49 7432 1987979</string>
    <string name="company_phone_mail">info@globalgaming.de</string>
    <string name="imprint_company_information_body">The European Commission has established an internet platform for online dispute resolution (the "ODR platform"). The ODR platform serves as a point of entry for the out-of-court resolution of disputes regarding contractual obligations arising from online purchase contracts. You can access the ODR platform via the following link: http://ec.europa.eu/consumers/odr "Notice according to § 36 Consumer Dispute Resolution Act (VSBG)."</string>
    <string name="imprint_company_information_title">Information on Online Dispute Resolution:</string>
    <string name="privacy_policy_body">We are very pleased about your interest in our company. Data protection is of particular importance to the management of GlobalGaming AG. Use of the GlobalGaming AG app is generally possible without any personal data being provided. However, if an affected person wishes to use special services of our company via our website, the processing of personal data may be necessary. If the processing of personal data is necessary and there is no legal basis for such processing, we generally seek the consent of the data subject.</string>
    <string name="terms_and_conditions_body">By using our app, you agree to our terms and conditions.</string>
    <string name="image_path">Image path</string>
    <string name="rating">Rating</string>
    <string name="safety_info">Are you sure, that you want to remove this product from our database ?</string>
    <string name="registration_successful">Registration successful !</string>
    <string name="update_successful">Update successful !</string>
    <string name="removed_successful">Removed successful</string>
    <string name="category">Category</string>
    <string name="single_article_picture">Single article picture</string>


</resources>
