<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.profile.ProfileFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:title="@string/title_profile"
            app:menu="@menu/icon_menu"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profile_picture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_profile_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:layout_marginTop="24dp"
            />

        <com.google.android.material.divider.MaterialDivider
            style="@style/Widget.Material3.MaterialDivider"
            android:id="@+id/divider_pic_details"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_profile_picture"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="32dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:id="@+id/til_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_pic_details"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="32dp"
            android:hint="@string/email"
            android:enabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:id="@+id/til_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:hint="@string/password"
            android:enabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:id="@+id/til_birthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:hint="@string/birthday"
            android:enabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:id="@+id/til_street"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_birthday"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:hint="@string/street"
            android:enabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:id="@+id/til_postal_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_street"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:hint="@string/postal_code"
            android:enabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_post_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:id="@+id/til_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_postal_code"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:hint="@string/city"
            android:enabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit"
            android:layout_height="60dp"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/til_city"
            android:layout_marginTop="32dp"
            android:text="@string/edit"
            app:icon="@drawable/ic_pencil"
            />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/btn_cancel"
            android:layout_height="60dp"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/btn_edit"
            app:layout_constraintEnd_toStartOf="@id/btn_confirm"
            app:layout_constraintTop_toBottomOf="@id/til_city"
            android:text="@string/cancel"
            android:layout_marginTop="32dp"
            android:visibility="gone"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            android:layout_height="60dp"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_city"
            app:icon="@drawable/ic_check"
            android:text="@string/confirm"
            android:layout_marginTop="32dp"
            android:visibility="gone"
            />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/et_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="til_email, til_password, til_birthday, til_street, til_postal_code, til_city"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>