<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.BottomSheet"
    android:id="@+id/fl_bottom_sheet"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Material3.BodyMedium"
            android:id="@+id/tv_simple_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/safety_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            />

        <com.google.android.material.button.MaterialButton
            style="@style/ThemeOverlay.Material3.Button.TonalButton"
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintTop_toBottomOf="@id/tv_simple_body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            android:text="@string/confirm"
            />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_confirm"
            android:layout_marginTop="12dp"
            android:text="@string/cancel"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>