<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/icon_menu"
        >

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/btn_go_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:icon="@drawable/ic_arrow_left"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Material3.ActionBar.Title"
            android:id="@+id/tv_toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textColor="?attr/colorOnSurface"
            />

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.TitleMedium"
        android:id="@+id/tv_company_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:text="@string/company_name"
        android:layout_marginTop="16dp"
        />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.BodyMedium"
        android:id="@+id/tv_company_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintTop_toBottomOf="@id/tv_company_name"
        android:text="@string/company_city"
        android:layout_marginTop="8dp"
        />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.BodyMedium"
        android:id="@+id/tv_company_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintTop_toBottomOf="@id/tv_company_city"
        android:text="@string/company_phone_number"
        android:layout_marginTop="8dp"
        />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.BodyMedium"
        android:id="@+id/tv_company_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintTop_toBottomOf="@id/tv_company_number"
        android:text="@string/company_phone_mail"
        android:layout_marginTop="8dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="8dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
